# Named

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py
include/Named/: NamedTuple.hpp  TaggedArray.hpp  TaggedBitset.hpp
include/Named/detail/: Common.hpp  NamedTupleUtil.hpp  StringLiteral.hpp  SynthThreeWayResult.hpp
single_include/: Named.hpp
source/sample/: main.cpp
test/: CMakeLists.txt  unit_test_named_tuple.cpp  unit_test_tagged_array.cpp  unit_test_tagged_bitset.cpp
test/compile_tests/tests/: different_size_comparison.cpp  non_unique_keys.cpp  same_size_comparison.cpp  tuple_element_empty_tuple.cpp  tuple_element_out_of_range.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
